Updated Spanish translation

--- a/po/es.po
+++ b/po/es.po
@@ -25,8 +25,8 @@ msgstr ""
 "Project-Id-Version: eel.HEAD.es\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=nautilus&component=Internationalization (i18n)\n"
-"POT-Creation-Date: 2009-04-30 12:27+0000\n"
-"PO-Revision-Date: 2009-05-01 15:24+0200\n"
+"POT-Creation-Date: 2009-05-01 18:16+0000\n"
+"PO-Revision-Date: 2009-05-03 19:25+0200\n"
 "Last-Translator: Juanje Ojeda Croissier <jojeda@emergya.es>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -1399,7 +1399,6 @@ msgid "Type of click used to launch/open files"
 msgstr "El tipo de pulsación utilizado para ejecutar/abrir los archivos"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:131
-#| msgid "Whether to enable tabs in Nautilus browser windows"
 msgid "Use extra mouse button events in Nautilus' browser window"
 msgstr ""
 "Usar eventos de botones del ratón adiciones en la ventana del examinador de "
@@ -4208,7 +4207,7 @@ msgstr "Crear un _documento"
 #. name, stock id, label
 #: ../src/file-manager/fm-directory-view.c:6588
 msgid "Open Wit_h"
-msgstr "Abrir _con"
+msgstr "Abrir c_on"
 
 # libnautilus-private/nautilus-program-chooser.c:1248
 #: ../src/file-manager/fm-directory-view.c:6589
@@ -4244,7 +4243,7 @@ msgstr "Vea o modifique las propiedades de la carpeta abierta"
 #: ../src/file-manager/fm-directory-view.c:6603
 #: ../src/file-manager/fm-tree-view.c:1241
 msgid "Create _Folder"
-msgstr "Crear una _carpeta"
+msgstr "Crear una ca_rpeta"
 
 #. tooltip
 #: ../src/file-manager/fm-directory-view.c:6604
@@ -4442,8 +4441,8 @@ msgstr "Duplica cada elemento seleccionado"
 #: ../src/file-manager/fm-directory-view.c:7969
 msgid "Ma_ke Link"
 msgid_plural "Ma_ke Links"
-msgstr[0] "Crear un en_lace"
-msgstr[1] "Crear en_laces"
+msgstr[0] "Crear un _enlace"
+msgstr[1] "Crear _enlaces"
 
 #. tooltip
 #: ../src/file-manager/fm-directory-view.c:6688
@@ -4508,7 +4507,7 @@ msgstr "_Restaurar"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6717
 msgid "Reset View to _Defaults"
-msgstr "Restaurar a vista _predeterminada"
+msgstr "Restaurar a _vista predeterminada"
 
 #. tooltip
 #: ../src/file-manager/fm-directory-view.c:6718
@@ -5103,14 +5102,14 @@ msgstr "Mantiene los iconos ordenados por emblemas en filas"
 #. name, stock id, label
 #: ../src/file-manager/fm-icon-view.c:1487
 msgid "Arran_ge Items"
-msgstr "Or_ganizar los elementos"
+msgstr "Organi_zar los elementos"
 
 # src/file-manager/fm-icon-view.c:310
 #. name, stock id
 #. label, accelerator
 #: ../src/file-manager/fm-icon-view.c:1489
 msgid "Stretc_h Icon..."
-msgstr "_Estirar icono…"
+msgstr "E_stirar icono…"
 
 #. tooltip
 #: ../src/file-manager/fm-icon-view.c:1490
@@ -5135,7 +5134,7 @@ msgstr "Restaura cada icono seleccionado a su tamaño original"
 #. label, accelerator
 #: ../src/file-manager/fm-icon-view.c:1497
 msgid "Clean _Up by Name"
-msgstr "Ordenar por _nombre"
+msgstr "Ordenar por nom_bre"
 
 #. tooltip
 #: ../src/file-manager/fm-icon-view.c:1498
@@ -5195,7 +5194,7 @@ msgstr "Por _nombre"
 # src/file-manager/fm-icon-view.c:116
 #: ../src/file-manager/fm-icon-view.c:1530
 msgid "By _Size"
-msgstr "Por ta_maño"
+msgstr "Por tama_ño"
 
 # src/file-manager/fm-icon-view.c:123
 #: ../src/file-manager/fm-icon-view.c:1534
@@ -5215,7 +5214,7 @@ msgstr "Por _emblemas"
 # src/file-manager/fm-icon-view.c:318
 #: ../src/file-manager/fm-icon-view.c:1664
 msgid "Restore Icon's Original Si_ze"
-msgstr "_Restablecer el tamaño original del icono"
+msgstr "Restablecer el tama_ño original del icono"
 
 # src/file-manager/fm-icon-view.c:1277
 #: ../src/file-manager/fm-icon-view.c:2086
@@ -5246,7 +5245,7 @@ msgstr "Muestra este lugar con la vista de iconos."
 #. translators: this is used in the view menu
 #: ../src/file-manager/fm-icon-view.c:3061
 msgid "_Compact"
-msgstr "_Compacta"
+msgstr "Co_mpacta"
 
 #: ../src/file-manager/fm-icon-view.c:3062
 msgid "The compact view encountered an error."
@@ -6047,7 +6046,6 @@ msgid "Show Emblems"
 msgstr "Mostrar emblemas"
 
 #: ../src/nautilus-file-management-properties.ui.h:4
-#| msgid "100 K"
 msgid "100 KB"
 msgstr "100 KiB"
 
@@ -6057,7 +6055,6 @@ msgid "33%"
 msgstr "33%"
 
 #: ../src/nautilus-file-management-properties.ui.h:22
-#| msgid "500 K"
 msgid "500 KB"
 msgstr "500 KiB"
 
@@ -6145,11 +6142,10 @@ msgstr "Toda_s las columnas tienen la misma anchura"
 # src/nautilus-location-bar.c:401
 #: ../src/nautilus-file-management-properties.ui.h:43
 msgid "Acti_on:"
-msgstr "Acci_ón:"
+msgstr "_Acción:"
 
 # libnautilus-private/nautilus-global-preferences.c:582
 #: ../src/nautilus-file-management-properties.ui.h:44
-#| msgid "_Always"
 msgid "Always"
 msgstr "Siempre"
 
@@ -6160,7 +6156,7 @@ msgstr "Siempre abrir en una ventana de _navegador"
 # src/file-manager/fm-directory-view.c:2669
 #: ../src/nautilus-file-management-properties.ui.h:46
 msgid "Ask before _emptying the Trash or deleting files"
-msgstr "Preguntar antes de _vaciar la papelera o borrar archivos"
+msgstr "Preguntar antes de vacia_r la papelera o borrar archivos"
 
 #: ../src/nautilus-file-management-properties.ui.h:47
 msgid "B_rowse media when inserted"
@@ -6200,11 +6196,11 @@ msgstr ""
 # src/file-manager/dfos-xfer.c:763
 #: ../src/nautilus-file-management-properties.ui.h:59
 msgid "Count _number of items:"
-msgstr "_Contar el número de elementos:"
+msgstr "Contar el _número de elementos:"
 
 #: ../src/nautilus-file-management-properties.ui.h:60
 msgid "D_efault zoom level:"
-msgstr "_Nivel de ampliación predeterminado:"
+msgstr "Niv_el de ampliación predeterminado:"
 
 #: ../src/nautilus-file-management-properties.ui.h:61
 msgid "Default _zoom level:"
@@ -6234,7 +6230,6 @@ msgstr "Columnas de la lista"
 
 # libnautilus-private/nautilus-global-preferences.c:587
 #: ../src/nautilus-file-management-properties.ui.h:69
-#| msgid "_Local File Only"
 msgid "Local Files Only"
 msgstr "Sólo archivos locales"
 
@@ -6244,7 +6239,6 @@ msgstr "Soporte"
 
 # libnautilus-private/nautilus-global-preferences.c:592
 #: ../src/nautilus-file-management-properties.ui.h:71
-#| msgid "_Never"
 msgid "Never"
 msgstr "Nunca"
 
@@ -6260,7 +6254,7 @@ msgstr "_Escucha previa de archivos de sonido:"
 
 #: ../src/nautilus-file-management-properties.ui.h:74
 msgid "Show _only folders"
-msgstr "Sólo mostrar las _carpetas"
+msgstr "Só_lo mostrar las carpetas"
 
 # libnautilus-private/nautilus-global-preferences.c:256
 #: ../src/nautilus-file-management-properties.ui.h:75
@@ -6296,11 +6290,11 @@ msgstr "_Organizar los elementos:"
 
 #: ../src/nautilus-file-management-properties.ui.h:83
 msgid "_DVD Video:"
-msgstr "Vídeo _DVD:"
+msgstr "_DVD de vídeo:"
 
 #: ../src/nautilus-file-management-properties.ui.h:84
 msgid "_Default zoom level:"
-msgstr "Nivel de ampliación _predeterminado:"
+msgstr "N_ivel de ampliación predeterminado:"
 
 #: ../src/nautilus-file-management-properties.ui.h:85
 msgid "_Double click to open items"
@@ -6332,11 +6326,11 @@ msgstr "_Ejecutar los archivos de texto ejecutables al abrirlos"
 
 #: ../src/nautilus-file-management-properties.ui.h:92
 msgid "_Single click to open items"
-msgstr "_Una sola pulsación para abrir los elementos"
+msgstr "Un_a sola pulsación para abrir los elementos"
 
 #: ../src/nautilus-file-management-properties.ui.h:93
 msgid "_Software:"
-msgstr "_Software:"
+msgstr "Soft_ware:"
 
 #: ../src/nautilus-file-management-properties.ui.h:94
 msgid "_Text beside icons"
@@ -6350,7 +6344,7 @@ msgstr "_Tipo:"
 
 #: ../src/nautilus-file-management-properties.ui.h:96
 msgid "_Use compact layout"
-msgstr "_Usar distribución compacta"
+msgstr "Usar distribución co_mpacta"
 
 #: ../src/nautilus-file-management-properties.ui.h:97
 msgid "_View executable text files when they are opened"
@@ -7534,7 +7528,7 @@ msgstr "Deja de cargar el lugar actual"
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:800
 msgid "_Reload"
-msgstr "_Recargar"
+msgstr "Re_cargar"
 
 #. tooltip
 #: ../src/nautilus-window-menus.c:801
@@ -7585,7 +7579,7 @@ msgstr "Aumenta el tamaño de la vista"
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:824
 msgid "Zoom _Out"
-msgstr "Redu_cir"
+msgstr "_Reducir"
 
 #. tooltip
 #: ../src/nautilus-window-menus.c:825 ../src/nautilus-zoom-control.c:92
@@ -7623,13 +7617,13 @@ msgstr "Conectar con un equipo remoto o disco compartido"
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:840
 msgid "_Home Folder"
-msgstr "Carpeta _personal"
+msgstr "_Carpeta personal"
 
 #. name, stock id
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:844
 msgid "_Computer"
-msgstr "_Equipo"
+msgstr "Eq_uipo"
 
 # libnautilus-private/nautilus-undo-signal-handlers.c:177
 #. name, stock id
