Prepare for 2.27.1 release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Major changes in 2.27.1 are:
+* Drop GTK+ deprecated symbols
+* Display the application icon in the popup menu
+* Fix autorun hints for Win32 software media
+* Allow shift+return during typeahead find
+* Update desktop icons according to DPI changes
+* Use the correct folder icon fallbacks
+* Autogenerate ChangeLog and use shave to display the build output
+
 Major changes in 2.26.2 are:
 * Fix issue with default dnd type when dragging to a parent directory
 * Fix icon view RTL layout in compact view
