Updated Greek translation

--- a/po/el.po
+++ b/po/el.po
@@ -1,6 +1,6 @@
 # Greek translation of Nautilus
-# Copyright (C) 2000 - 2008 Free Software Foundation, Inc.
-# This file is distributed under the same license as the nautilus package.
+# Copyright (C) 2000 - 2009 Free Software Foundation, Inc.
+# This file is distributed under the same license as the Nautilus package.
 #
 # simos: 652 messages, 19Feb2001, more messages remaining.
 # simos: 713 messages, 20Feb2001, more messages remaining.
@@ -64,8 +64,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: el\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-05-09 14:10+0100\n"
-"PO-Revision-Date: 2009-05-09 14:09+0100\n"
+"POT-Creation-Date: 2009-05-10 10:26+0100\n"
+"PO-Revision-Date: 2009-05-10 10:55+0300\n"
 "Last-Translator: Simos Xenitellis <simos@gnome.org>\n"
 "Language-Team: Greek <team@gnome.gr>\n"
 "MIME-Version: 1.0\n"
@@ -131,12 +131,10 @@ msgid "ID"
 msgstr "ID"
 
 #: ../cut-n-paste-code/libegg/eggsmclient.c:252
-#, fuzzy
 msgid "Session management options:"
-msgstr "Επιλογές διαχειριστή συνεδρίας"
+msgstr "Επιλογές διαχειριστή συνεδρίας:"
 
 #: ../cut-n-paste-code/libegg/eggsmclient.c:253
-#, fuzzy
 msgid "Show session management options"
 msgstr "Εμφάνιση επιλογών διαχειριστή συνεδρίας"
 
@@ -795,6 +793,9 @@ msgid ""
 "will determine if any action is taken inside of Nautilus when either is "
 "pressed."
 msgstr ""
+"Για χρήστες με ποντίκια που έχουν κουμπιά \"Μπροστά\" και \"Πίσω\", αυτό το "
+"κλειδί θα καθορίζει αν θα γίνεται κάποια ενέργεια μέσα στο Ναυτίλο όταν "
+"πιέζετε ένα από αυτά."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:44
 msgid ""
@@ -802,6 +803,9 @@ msgid ""
 "will set which button activates the \"Back\" command in a browser window. "
 "Possible values range between 6 and 14."
 msgstr ""
+"Για χρήστες με ποντίκια που έχουν κουμπιά \"Μπροστά\" και \"Πίσω\", αυτό το "
+"κλειδί θα καθορίζει ποιο κουμπί θα ενεργοποιεί την εντολή \"Πίσω\" σε ένα "
+"παράθυρο περιηγητή. Πιθανές τιμές κυμαίνονται ανάμεσα στο 6 και το 14."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:45
 msgid ""
@@ -809,6 +813,9 @@ msgid ""
 "will set which button activates the \"Forward\" command in a browser window. "
 "Possible values range between 6 and 14."
 msgstr ""
+"Για χρήστες με ποντίκια που έχουν κουμπιά \"Μπροστά\" και \"Πίσω\", αυτό το "
+"κλειδί θα καθορίζει ποιο κουμπί θα ενεργοποιεί την εντολή \"Μπροστά\" σε ένα "
+"παράθυρο περιηγητή. Πιθανές τιμές κυμαίνονται ανάμεσα στο 6 και το 14."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:46
 msgid "Home icon visible on desktop"
@@ -1143,10 +1150,12 @@ msgstr "Μέγιστο μέγεθος εικόνας για προεπισκόπ
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:89
 msgid "Mouse button to activate the \"Back\" command in browser window"
 msgstr ""
+"Κουμπί ποντικιού που θα εκτελεί την εντολή \"Πίσω\" στο παράθυρο περιηγητή"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:90
 msgid "Mouse button to activate the \"Forward\" command in browser window"
 msgstr ""
+"Κουμπί ποντικιού που θα εκτελεί την εντολή \"Μπροστά\" στο παράθυρο περιηγητή"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:91
 msgid ""
@@ -1391,9 +1400,8 @@ msgid "Type of click used to launch/open files"
 msgstr "Τύπος κλικ που χρησιμοποιείται για το άνοιγμα/εκκίνηση αρχείων"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:131
-#, fuzzy
 msgid "Use extra mouse button events in Nautilus' browser window"
-msgstr "Αν θα ενεργοποιηθούν οι καρτέλες στα παράθυρα περιήγησης του Ναυτίλου"
+msgstr "Χρήση επιπλέον κουμπιών ποντικιού στα παράθυρα περιήγησης του Ναυτίλου"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:132
 msgid "Use manual layout in new windows"
@@ -6987,9 +6995,12 @@ msgstr "Πνευματικά δικαιώματα © 1999-2008 Οι συγγρα
 #: ../src/nautilus-window-menus.c:532
 msgid "translator-credits"
 msgstr ""
-"Συμεών (σίμος) Ξενιτέλλης <simos@hellug.gr>\n"
-"Κώστας Παπαδήμας <pkst@gnome.org>\n"
-"Πιέρρος Παπαδέας <ppapadeas@gmail.com>"
+"Ελληνική μεταφραστική ομάδα GNOME\n"
+" Συμεών (σίμος) Ξενιτέλλης <simos@gnome.org>\n"
+" Κώστας Παπαδήμας <pkst@gnome.org>\n"
+" Πιέρρος Παπαδέας <ppapadeas@gmail.com>\n"
+"\n"
+"Για περισσότερα δείτε http://www.gnome.gr/"
 
 #: ../src/nautilus-window-menus.c:535
 msgid "Nautilus Web Site"
