--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-05-17  Petr Kovar  <pknbe@volny.cz>
+
+	* cs.po: Updated Czech translation by Lucas Lommer.
+
 === nautilus 2.26.2 ===
 
 2009-04-13  Reşat SABIQ <tilde.birlik@gmail.com>
