Fixed Czech translation by Lucas Lommer
Phase two.

--- a/po/cs.po
+++ b/po/cs.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-05-17 21:32+0200\n"
-"PO-Revision-Date: 2009-05-17 21:19+0200\n"
+"POT-Creation-Date: 2009-05-17 21:40+0200\n"
+"PO-Revision-Date: 2009-05-17 21:38+0200\n"
 "Last-Translator: Petr Kovar <pknbe@volny.cz>\n"
 "Language-Team: Czech <gnome-cs-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -83,12 +83,10 @@ msgid "ID"
 msgstr "ID"
 
 #: ../cut-n-paste-code/libegg/eggsmclient.c:252
-#, fuzzy
 msgid "Session management options:"
-msgstr "Volby správy sezení"
+msgstr "Volby správy sezení:"
 
 #: ../cut-n-paste-code/libegg/eggsmclient.c:253
-#, fuzzy
 msgid "Show session management options"
 msgstr "Zobrazit volby správy sezení"
 
@@ -716,25 +714,37 @@ msgstr ""
 "složek po soustech."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:43
+#, fuzzy
 msgid ""
 "For users with mice that have \"Forward\" and \"Back\" buttons, this key "
 "will determine if any action is taken inside of Nautilus when either is "
 "pressed."
 msgstr ""
+"Pro uživatele, kteří mají myš s tlačítky \"Vpřed\" a \"Zpět\", slouží tento "
+"klíč k rozpoznání, zda spustit v Nautilu nějakou akci, pokud je jedno z nich "
+"stisknuto."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:44
+#, fuzzy
 msgid ""
 "For users with mice that have buttons for \"Forward\" and \"Back\", this key "
 "will set which button activates the \"Back\" command in a browser window. "
 "Possible values range between 6 and 14."
 msgstr ""
+"Pro uživatele, kteří mají myš s tlačítky \"Vpřed\" a \"Zpět\", slouží tento "
+"klíč k určení, které tlačírko spouští v okně prohlížeče funkci \"Zpět\". "
+"Možné hodnoty jsou mezi 6 a 14."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:45
+#, fuzzy
 msgid ""
 "For users with mice that have buttons for \"Forward\" and \"Back\", this key "
 "will set which button activates the \"Forward\" command in a browser window. "
 "Possible values range between 6 and 14."
 msgstr ""
+"Pro uživatele, kteří mají myš s tlačítky \"Vpřed\" a \"Zpět\", slouží tento "
+"klíč k určení, které tlačírko spouští v okně prohlížeče funkci \"Vpřed\". "
+"Možné hodnoty jsou mezi 6 a 14."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:46
 msgid "Home icon visible on desktop"
@@ -1062,12 +1072,14 @@ msgid "Maximum image size for thumbnailing"
 msgstr "Maximální velikost obrázku pro náhledy"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:89
+#, fuzzy
 msgid "Mouse button to activate the \"Back\" command in browser window"
-msgstr ""
+msgstr "Tlačítko pro aktivaci funkce \"Zpět\" v okně prohlížeče"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:90
+#, fuzzy
 msgid "Mouse button to activate the \"Forward\" command in browser window"
-msgstr ""
+msgstr "Tlačítko pro aktivaci funkce \"Vpřed\" v okně prohlížeče"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:91
 msgid ""
@@ -1297,7 +1309,7 @@ msgstr "Typ klepnutí používaný pro spuštění/otevření souborů"
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:131
 #, fuzzy
 msgid "Use extra mouse button events in Nautilus' browser window"
-msgstr "Zdali povolit používání karet v okně prohlížeče Nautilus"
+msgstr "Použít extra události tlačítek myši v okně prohlížeče Nautilus"
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:132
 msgid "Use manual layout in new windows"
@@ -4815,7 +4827,7 @@ msgstr "V Kompaktním zobrazení došlo k chybě během startu."
 
 #: ../src/file-manager/fm-icon-view.c:3064
 msgid "Display this location with the compact view."
-msgstr "Prohlížet toto umístění pomocí Kompaktního zobrazení."
+msgstr "Prohlížet toto umístění pomocí Kompaktní zobrazení."
 
 #: ../src/file-manager/fm-list-model.c:382
 #: ../src/file-manager/fm-tree-model.c:1268
@@ -6712,9 +6724,8 @@ msgstr ""
 "síti."
 
 #: ../src/nautilus-window-menus.c:522
-#, fuzzy
 msgid "Copyright © 1999-2009 The Nautilus authors"
-msgstr "Copyright © 1999-2008 autoři programu Nautilus"
+msgstr "Copyright © 1999-2009 autoři programu Nautilus"
 
 #. Translators should localize the following string
 #. * which will be displayed at the bottom of the about
