--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Major changes in 2.26.3 are:
+* New translations
+* Allow shift+return during typeahead find
+* Some startup performance fixes
+* Fix excessive whitespace on right hand size in zoomed icon view
+
 Major changes in 2.26.2 are:
 * Fix issue with default dnd type when dragging to a parent directory
 * Fix icon view RTL layout in compact view
