Updated Bulgarian translation

--- a/po/bg.po
+++ b/po/bg.po
@@ -10,10 +10,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: nautilus trunk\n"
+"Project-Id-Version: nautilus gnome-2-26\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-05-19 07:05+0300\n"
-"PO-Revision-Date: 2009-05-19 07:06+0300\n"
+"PO-Revision-Date: 2009-05-19 07:08+0300\n"
 "Last-Translator: Alexander Shopov <ash@contact.bg>\n"
 "Language-Team: Bulgarian <dict@fsa-bg.org>\n"
 "MIME-Version: 1.0\n"
