--- a/po/et.po
+++ b/po/et.po
@@ -22,8 +22,8 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=nautilus&component=Internationalization (i18n)\n"
-"POT-Creation-Date: 2009-05-01 18:17+0000\n"
-"PO-Revision-Date: 2009-05-02 11:12+0300\n"
+"POT-Creation-Date: 2009-05-19 04:11+0000\n"
+"PO-Revision-Date: 2009-05-19 14:27+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -74,10 +74,10 @@ msgstr "Määra seansihalduse ID"
 msgid "ID"
 msgstr "ID"
 
-msgid "Session Management Options"
-msgstr "Seansihalduse valikud"
+msgid "Session management options:"
+msgstr "Seansihalduse valikud:"
 
-msgid "Show Session Management options"
+msgid "Show session management options"
 msgstr "Seansihalduse valikute näitamine"
 
 msgid "Apparition"
@@ -571,6 +571,24 @@ msgstr ""
 "Negatiivne väärtus tähendab, et piirangut pole. Väärtus on ligikaudne kuna "
 "katalooge loetakse tükkhaaval."
 
+msgid ""
+"For users with mice that have \"Forward\" and \"Back\" buttons, this key "
+"will determine if any action is taken inside of Nautilus when either is "
+"pressed."
+msgstr ""
+
+msgid ""
+"For users with mice that have buttons for \"Forward\" and \"Back\", this key "
+"will set which button activates the \"Back\" command in a browser window. "
+"Possible values range between 6 and 14."
+msgstr ""
+
+msgid ""
+"For users with mice that have buttons for \"Forward\" and \"Back\", this key "
+"will set which button activates the \"Forward\" command in a browser window. "
+"Possible values range between 6 and 14."
+msgstr ""
+
 msgid "Home icon visible on desktop"
 msgstr "Kodukataloogi ikoon on töölaual nähtav"
 
@@ -834,6 +852,12 @@ msgstr "Suurim käidetavate failide arv kataloogi kohta"
 msgid "Maximum image size for thumbnailing"
 msgstr "Pildifaili maksimaalne suurus pisipildi näitamiseks"
 
+msgid "Mouse button to activate the \"Back\" command in browser window"
+msgstr ""
+
+msgid "Mouse button to activate the \"Forward\" command in browser window"
+msgstr ""
+
 msgid ""
 "Name of the Nautilus theme to use. This has been deprecated as of Nautilus "
 "2.2. Please use the icon theme instead."
@@ -1025,6 +1049,9 @@ msgstr "Prügikastiikoon on töölaual nähtav"
 
 msgid "Type of click used to launch/open files"
 msgstr "Hiireklõpsu liik, millega faile avatakse"
+
+msgid "Use extra mouse button events in Nautilus' browser window"
+msgstr ""
 
 msgid "Use manual layout in new windows"
 msgstr "Käsitsipaigutuse kasutamine uutes akendes"
@@ -5129,8 +5156,8 @@ msgstr ""
 "Nautiluse abil saab korras hoida nii enda arvutis kui internetis olevaid "
 "faile ja kaustu."
 
-msgid "Copyright © 1999-2008 The Nautilus authors"
-msgstr "Autoriõigused © 1999-2008 Nautiluse autorid"
+msgid "Copyright © 1999-2009 The Nautilus authors"
+msgstr "Autoriõigused © 1999-2009 Nautiluse autorid"
 
 #. Translators should localize the following string
 #. * which will be displayed at the bottom of the about
