Updated Tamil translation

--- a/po/ta.po
+++ b/po/ta.po
@@ -6,21 +6,21 @@
 #
 # Jayaradha N <jaya@pune.redhat.com>, 2004.
 # Felix <ifelix@redhat.com>, 2006.
-# Dr.T.Vasudevan <agnihot3@gmail.com>, 2007, 2008.
+# Dr.T.Vasudevan <agnihot3@gmail.com>, 2007, 2008, 2009.
 # Dr.T.vasudevan <agnihot3@gmail.com>, 2009.
 # I. Felix <ifelix@redhat.com>, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: nautilusta\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-05-21 17:49+0530\n"
-"PO-Revision-Date: 2009-05-21 18:08+0530\n"
-"Last-Translator: Dr.T.vasudevan <agnihot3@gmail.com>\n"
-"Language-Team: Tamil <Ubuntu-l10n-tam@lists.ubuntu.com>\n"
+"POT-Creation-Date: 2009-05-25 17:40+0530\n"
+"PO-Revision-Date: 2009-05-25 17:41+0530\n"
+"Last-Translator: Dr.T.Vasudevan <agnihot3@gmail.com>\n"
+"Language-Team: American English <Ubuntu-l10n-tam@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Lokalize 0.2\n"
 "Plural-Forms: nplurals=2; plural=(n!=1);\\n"
 "\n"
 "\n"
@@ -710,21 +710,29 @@ msgid ""
 "For users with mice that have \"Forward\" and \"Back\" buttons, this key "
 "will determine if any action is taken inside of Nautilus when either is "
 "pressed."
-msgstr "சொடுக்கியில் \"முன்னே\" மற்றும்\"பின்னே\"  பொத்தான்கள் உள்ள பயனர்களுக்கு இந்த விசை இரண்டில் ஒன்றை அழுத்தினாலும் நாடுலஸ் உள்ளே என்ன செயல் நிகழ வேண்டும் என நிர்ணயிக்கிறது."
+msgstr ""
+"சொடுக்கியில் \"முன்னே\" மற்றும்\"பின்னே\"  பொத்தான்கள் உள்ள பயனர்களுக்கு இந்த விசை இரண்டில் "
+"ஒன்றை அழுத்தினாலும் நாடுலஸ் உள்ளே என்ன செயல் நிகழ வேண்டும் என நிர்ணயிக்கிறது."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:44
 msgid ""
 "For users with mice that have buttons for \"Forward\" and \"Back\", this key "
 "will set which button activates the \"Back\" command in a browser window. "
 "Possible values range between 6 and 14."
-msgstr "சொடுக்கியில் \"முன்னே\" மற்றும்\"பின்னே\"  பொத்தான்கள் உள்ள பயனர்களுக்கு இந்த விசை இரண்டில் எந்த பொத்தானை அழுத்தினால் \"பின்னே\" கட்டளை உலாவி சாளரத்தில்  நிகழ வேண்டும் என நிர்ணயிக்கிறது. இருக்கக்கூடிய மதிப்புகள் 6 முதல் 14 வரை."
+msgstr ""
+"சொடுக்கியில் \"முன்னே\" மற்றும்\"பின்னே\"  பொத்தான்கள் உள்ள பயனர்களுக்கு இந்த விசை இரண்டில் "
+"எந்த பொத்தானை அழுத்தினால் \"பின்னே\" கட்டளை உலாவி சாளரத்தில்  நிகழ வேண்டும் என "
+"நிர்ணயிக்கிறது. இருக்கக்கூடிய மதிப்புகள் 6 முதல் 14 வரை."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:45
 msgid ""
 "For users with mice that have buttons for \"Forward\" and \"Back\", this key "
 "will set which button activates the \"Forward\" command in a browser window. "
 "Possible values range between 6 and 14."
-msgstr "சொடுக்கியில் \"முன்னே\" மற்றும்\"பின்னே\"  பொத்தான்கள் உள்ள பயனர்களுக்கு இந்த விசை இரண்டில் எந்த பொத்தானை அழுத்தினால் \"முன்னே\" கட்டளை உலாவி சாளரத்தில்  நிகழ வேண்டும் என நிர்ணயிக்கிறது. இருக்கக்கூடிய மதிப்புகள் 6 முதல் 14 வரை."
+msgstr ""
+"சொடுக்கியில் \"முன்னே\" மற்றும்\"பின்னே\"  பொத்தான்கள் உள்ள பயனர்களுக்கு இந்த விசை இரண்டில் "
+"எந்த பொத்தானை அழுத்தினால் \"முன்னே\" கட்டளை உலாவி சாளரத்தில்  நிகழ வேண்டும் என "
+"நிர்ணயிக்கிறது. இருக்கக்கூடிய மதிப்புகள் 6 முதல் 14 வரை."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:46
 msgid "Home icon visible on desktop"
@@ -5756,11 +5764,11 @@ msgid_plural "Do you want to view %d locations?"
 msgstr[0] "%d இடத்தைப் பார்க்க வேண்டுமா?"
 msgstr[1] "%d இடங்களை பார்க்க வேண்டுமா?"
 
-#: ../src/nautilus-location-dialog.c:149
+#: ../src/nautilus-location-dialog.c:151
 msgid "Open Location"
 msgstr "இடத்தை திற"
 
-#: ../src/nautilus-location-dialog.c:160
+#: ../src/nautilus-location-dialog.c:162
 msgid "_Location:"
 msgstr "(_L)இடம்:"
 
@@ -6062,7 +6070,7 @@ msgstr "பொத்தான் மற்றும் உரை அடிப்
 msgid "_Close Tab"
 msgstr "(_C ) கீற்றை  மூடு"
 
-#: ../src/nautilus-navigation-window.c:1270
+#: ../src/nautilus-navigation-window.c:1272
 #, c-format
 msgid "%s - File Browser"
 msgstr "%s - கோப்பு உலாவி"
@@ -6551,8 +6559,8 @@ msgstr ""
 "வைத்துக்கொள்ள உதவுகிறது."
 
 #: ../src/nautilus-window-menus.c:522
-msgid "Copyright © 1999-2008 The Nautilus authors"
-msgstr "காப்புரிமை © 1999-2008 நாடுலஸ் உருவாக்கியோர்."
+msgid "Copyright © 1999-2009 The Nautilus authors"
+msgstr "காப்புரிமை © 1999-2009 நாடுலஸ்உருவாக்கியோர்."
 
 #. Translators should localize the following string
 #. * which will be displayed at the bottom of the about
