--- a/po/et.po
+++ b/po/et.po
@@ -22,9 +22,9 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=nautilus&component=Internationalization (i18n)\n"
-"POT-Creation-Date: 2009-05-19 04:11+0000\n"
-"PO-Revision-Date: 2009-05-19 14:27+0300\n"
-"Last-Translator: Ivar Smolin <okul@linux.ee>\n"
+"POT-Creation-Date: 2009-06-07 18:54+0000\n"
+"PO-Revision-Date: 2009-06-08 00:13+0300\n"
+"Last-Translator: Mattias Põldaru <mahfiaz gmail com>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -576,18 +576,26 @@ msgid ""
 "will determine if any action is taken inside of Nautilus when either is "
 "pressed."
 msgstr ""
+"Mõnel hiirel on \"Edasi\" ja \"Tagasi\" nupud. See võti määrab, mida teeb "
+"Nautilus nende nuppude vajutamisel."
 
 msgid ""
 "For users with mice that have buttons for \"Forward\" and \"Back\", this key "
 "will set which button activates the \"Back\" command in a browser window. "
 "Possible values range between 6 and 14."
 msgstr ""
+"Mõnel hiirel on \"Edasi\" ja \"Tagasi\" nupud. See võti määrab, mis nupp "
+"aktiveerib brauseriaknas käsu \"Tagasi\". Võimalikud on väärtused vahemikus "
+"6 kuni 14."
 
 msgid ""
 "For users with mice that have buttons for \"Forward\" and \"Back\", this key "
 "will set which button activates the \"Forward\" command in a browser window. "
 "Possible values range between 6 and 14."
 msgstr ""
+"Mõnel hiirel on \"Edasi\" ja \"Tagasi\" nupud. See võti määrab, mis nupp "
+"aktiveerib brauseriaknas käsu \"Edasi\". Võimalikud on väärtused vahemikus 6 "
+"kuni 14."
 
 msgid "Home icon visible on desktop"
 msgstr "Kodukataloogi ikoon on töölaual nähtav"
@@ -670,6 +678,15 @@ msgstr ""
 
 msgid "If set to true, then Nautilus will draw the icons on the desktop."
 msgstr "Kui märgitud, näitab Nautilus töölaual ikoone."
+
+msgid ""
+"If set to true, then Nautilus will exit when all windows are destroyed. This "
+"is the default setting. If set to false, it can be started without any "
+"window, so nautilus can serve as a daemon to monitor media automount, or "
+"similar tasks."
+msgstr ""
+"Kui tõene, väljub Nautilus, kui kõik aknad suletakse. See on vaikimisi säte. "
+"Kui see pole tõene, "
 
 msgid ""
 "If set to true, then Nautilus will have a feature allowing you to delete a "
@@ -853,10 +870,10 @@ msgid "Maximum image size for thumbnailing"
 msgstr "Pildifaili maksimaalne suurus pisipildi näitamiseks"
 
 msgid "Mouse button to activate the \"Back\" command in browser window"
-msgstr ""
+msgstr "Hiirenupp, millega aktiveeritakse brauseriaknas käsk \"Tagasi\""
 
 msgid "Mouse button to activate the \"Forward\" command in browser window"
-msgstr ""
+msgstr "Hiirenupp, millega aktiveeritakse brauseriaknas käsk \"Edasi\""
 
 msgid ""
 "Name of the Nautilus theme to use. This has been deprecated as of Nautilus "
@@ -870,6 +887,9 @@ msgstr "Nautilus näitab töölauda"
 
 msgid "Nautilus uses the users home folder as the desktop"
 msgstr "Nautilus kasutab kodukataloogi kui töölauda"
+
+msgid "Nautilus will exit when last window destroyed."
+msgstr "Nautilus sulgub, kui viimane aken suletakse."
 
 msgid "Network Servers icon visible on the desktop"
 msgstr "Võrguserverite ikoon on töölaual nähtav"
@@ -1051,7 +1071,7 @@ msgid "Type of click used to launch/open files"
 msgstr "Hiireklõpsu liik, millega faile avatakse"
 
 msgid "Use extra mouse button events in Nautilus' browser window"
-msgstr ""
+msgstr "Nautiluse aknas kasutatakse hiire lisanuppe"
 
 msgid "Use manual layout in new windows"
 msgstr "Käsitsipaigutuse kasutamine uutes akendes"
