--- a/po/et.po
+++ b/po/et.po
@@ -22,9 +22,9 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=nautilus&component=Internationalization (i18n)\n"
-"POT-Creation-Date: 2009-06-07 18:54+0000\n"
-"PO-Revision-Date: 2009-06-08 00:13+0300\n"
-"Last-Translator: Mattias Põldaru <mahfiaz gmail com>\n"
+"POT-Creation-Date: 2009-06-08 15:04+0000\n"
+"PO-Revision-Date: 2009-06-09 17:55+0300\n"
+"Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -773,9 +773,6 @@ msgstr ""
 "Kui märgitud, siis on kompaktvaate kõik veerud sama laiusega. Vastasel juhul "
 "määratakse iga veeru laius eraldi."
 
-msgid "If to show the package installer for unknown mime types"
-msgstr "Kas tundmatute mime-tüüpide jaoks näidata pakihaldurit"
-
 msgid ""
 "If true, files in new windows will be sorted in reverse order. ie, if sorted "
 "by name, then instead of sorting the files from \"a\" to \"z\", they will be "
@@ -941,6 +938,9 @@ msgstr "Uutes akendes külgpaani näitamine"
 
 msgid "Show status bar in new windows"
 msgstr "Uutes akendes olekuriba näitamine"
+
+msgid "Show the package installer for unknown mime types"
+msgstr "Tundmatute mime-tüüpide jaoks pakipaigaldaja näitamine"
 
 msgid "Show toolbar in new windows"
 msgstr "Uutes akendes tööriistariba näitamine"
@@ -1140,13 +1140,6 @@ msgstr "Kas kohene kustutamine on lubatud"
 msgid "Whether to enable tabs in Nautilus browser windows"
 msgstr "Kas Nautiluse sirvimisakendes on kaardid lubatud või mitte"
 
-msgid ""
-"Whether to present the user a dialog to search using the package installer "
-"for an application that can open an unknown mime type."
-msgstr ""
-"Kas kasutajale näidata pakihalduri rakenduste otsingudialoogi, et otsida "
-"tundmatu mime-tüübiga faili avamiseks rakendust."
-
 msgid "Whether to preview sounds when mousing over an icon"
 msgstr "Kas kursori liikumisel üle ikooni on eelvaatehääled lubatud"
 
@@ -1155,6 +1148,13 @@ msgstr "Kas varufaile näidatakse või mitte"
 
 msgid "Whether to show hidden files"
 msgstr "Kas peidetud faile näidatakse või mitte"
+
+msgid ""
+"Whether to show the user a package installer dialog in case an unknown mime "
+"type is opened, in order to search for an application to handle it."
+msgstr ""
+"Kas tundmatute mime-tüüpide avamisel tuleb sobiva rakenduse leidmiseks "
+"näidata pakipaigaldaja dialoogi või mitte."
 
 msgid "Width of the side pane"
 msgstr "Külgpaani laius"
