Added entries for Hindi Translation updated by Rajesh Ranjan

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-06-10  Manoj Kumar Giri <mgiri@redhat.com>
+
+	* hi.po: Committed Hindi Translation on behalf of Rajesh Ranjan.
+
 === nautilus 2.26.2 ===
 
 2009-04-13  Reşat SABIQ <tilde.birlik@gmail.com>
