Added entries for Hindi Translation updated by Rajesh Ranjan

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-06-10  Manoj Kumar Giri <mgiri@redhat.com>
+
+	* hi.po: Committed Hindi Translation on behalf of Rajesh Ranjan.
+
 2009-05-24  Takeshi AIHANA <takeshi.aihana@gmail.com>
 
 	* ja.po: Updated Japanese translation.
