Update NEWS for 1.3.1

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Major changes in 2.27.2 are:
+* Support ctrl-drop in list view
+* Allow user defined keyboard shortcuts for extension items
+* Fix crash on click on toolbar
+* Fix crash on entering empty location
+* Added daemon-mode (don't exit with last window)
+* Display info about the selected item in the information sidebar
+* Sort applications in open with
+
 Major changes in 2.27.1 are:
 * Drop GTK+ deprecated symbols
 * Display the application icon in the popup menu
