--- a/po/et.po
+++ b/po/et.po
@@ -23,7 +23,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=nautilus&component=Internationalization (i18n)\n"
 "POT-Creation-Date: 2009-06-08 15:04+0000\n"
-"PO-Revision-Date: 2009-06-09 17:55+0300\n"
+"PO-Revision-Date: 2009-06-17 16:31+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -63,7 +63,7 @@ msgid "Disable connection to session manager"
 msgstr "Seansihalduriga ühendumise keelamine"
 
 msgid "Specify file containing saved configuration"
-msgstr "Määra salvestatud seadistust sisaldav fail"
+msgstr "Määra salvestatud seadistuse fail"
 
 msgid "FILE"
 msgstr "FAIL"
