--- a/po/et.po
+++ b/po/et.po
@@ -23,8 +23,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=nautilus&component=Internationalization (i18n)\n"
 "POT-Creation-Date: 2009-06-08 15:04+0000\n"
-"PO-Revision-Date: 2009-06-17 16:31+0300\n"
-"Last-Translator: Ivar Smolin <okul@linux.ee>\n"
+"PO-Revision-Date: 2009-06-18 12:32+0300\n"
+"Last-Translator: Mattias Põldaru <mahfiaz gmail com>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1692,8 +1692,8 @@ msgstr "Failide prügikasti viskamine"
 #, c-format
 msgid "%'d file left to trash"
 msgid_plural "%'d files left to trash"
-msgstr[0] "Prügikasti on jäänud %'d fail"
-msgstr[1] "Prügikasti on jäänud %'d faili"
+msgstr[0] "Prügikasti visata on jäänud %'d fail"
+msgstr[1] "Prügikasti visata on jäänud %'d faili"
 
 msgid "Cannot move file to trash, do you want to delete immediately?"
 msgstr ""
